--- a/WebContent/VAADIN/themes/sampler/sampler/styles.css
+++ b/WebContent/VAADIN/themes/sampler/sampler/styles.css
@@ -21,6 +21,7 @@
 	padding: 0;
 	background: transparent url(sampler.png) no-repeat;
 	overflow: hidden;
+	border: none;
 }
 
 .v-app-SamplerApplication .topbar .logo img {
