--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1707,6 +1707,7 @@ div > .v-button .v-errorindicator,
 	display: inline;
 	font-weight: normal;
 	color: #1b699f;
+	font-size: 12px;
 }
 .v-button.v-button-link .v-icon + span {
 	margin: 0;
@@ -1834,6 +1835,14 @@ div > .v-button-small span,
 	border-color: #84949c;
 	border-top-color: #83939b;
 	border-bottom-color: #888d91;
+}
+/* Link button in IE6 */
+.v-ie6 .v-button-link {
+	border: none;
+	padding: 0;
+	background: transparent;
+	line-height: normal;
+	font-size: 12px;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/common/common.css */
