"poro" theme updates: * tree styles done * required some modifications to textfield styles as well (because of a new sprite after the textfield background image) * one more fix to link style button (remove text shadow)
svn changeset:7773 branch:6.0

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -1359,7 +1359,7 @@ textarea.v-textarea-prompt {
 	background-position: -5px -10px;
 }
 div.v-tree-node-leaf {
-	background: none;
+	background: transparent;
 }
 .v-tree-node-caption {
 	margin-left: 1em;
