--- a/WebContent/VAADIN/themes/base/tree/tree.css
+++ b/WebContent/VAADIN/themes/base/tree/tree.css
@@ -8,7 +8,7 @@
 	background-position: -5px -10px;
 }
 div.v-tree-node-leaf {
-	background: none;
+	background: transparent;
 }
 .v-tree-node-caption {
 	margin-left: 1em;
