--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1359,7 +1359,7 @@ textarea.v-textarea-prompt {
 	background-position: -5px -10px;
 }
 div.v-tree-node-leaf {
-	background: none;
+	background: transparent;
 }
 .v-tree-node-caption {
 	margin-left: 1em;
@@ -1708,6 +1708,7 @@ div > .v-button .v-errorindicator,
 	font-weight: normal;
 	color: #1b699f;
 	font-size: 12px;
+	text-shadow: none;
 }
 .v-button.v-button-link .v-icon + span {
 	margin: 0;
@@ -2702,4 +2703,46 @@ input.v-textfield-prompt {
 .v-ff35 input.v-textfield-small,
 .v-op input.v-textfield-small {
 	height: 16px;
+}
+
+/* ./WebContent/VAADIN/themes/reindeer/tree/tree.css */
+.v-tree-node {
+	background: transparent url(tree/img/arrows.png) no-repeat 6px -12px;
+	line-height: 16px;
+}
+.v-ie6 .v-tree-node {
+	background-image: url(tree/img/arrows-ie6.png);
+	background-repeat: no-repeat;
+}
+.v-ie6 div.v-tree-node-leaf {
+	background: transparent;
+}
+.v-tree-node-expanded {
+	background-position: -7px 3px;
+}
+.v-tree-node-caption {
+	margin-left: 16px;
+}
+.v-tree-node span {
+	padding: 0 2px;
+}
+.v-tree-node-selected span {
+	background: #4d749f repeat-x;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -748px;
+	color: #fff;
+	padding: 0 2px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	text-shadow: #2b425a 0 1px 0;
+}
+.v-tree-node-children {
+	padding-left: 16px;
+}
+/* IMPORTANT keep the offsetWidth (width + padding) of this element the same as the margin-left of v-tree-node-caption */
+.v-ie6 .v-tree-node-ie6compatnode {
+	width: 14px;
+	height: 10px;
+	padding: 1px;
 }
